--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <profile>
             <id>newProfile</id>
             <properties>
+                <basedir>job4j</basedir>
                 <db.url>jdbc:postgresql://127.0.0.1:5432/rabbit</db.url>
                 <db.username>postgres</db.username>
                 <db.password>password</db.password>
@@ -173,26 +174,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>
-            </plugin>
-            <plugin>
-                <groupId>org.liquibase</groupId>
-                <artifactId>liquibase-maven-plugin</artifactId>
-                <version>3.6.2</version>
-                <configuration>
-                    <changeLogFile>${basedir}/src/db/master.xml</changeLogFile>
-                    <url>${db.url}</url>
-                    <driver>${db.driver}</driver>
-                    <username>${db.username}</username>
-                    <password>${db.password}</password>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>update</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
