--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>junior_ood</module>
         <module>junior_gc</module>
+        <module>junior_db</module>
     </modules>
 
     <properties>
@@ -18,30 +19,6 @@
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
-    <profiles>
-        <profile>
-            <id>newProfile</id>
-            <properties>
-                <basedir>job4j</basedir>
-                <db.url>jdbc:postgresql://127.0.0.1:5432/rabbit</db.url>
-                <db.username>postgres</db.username>
-                <db.password>password</db.password>
-                <db.driver>org.postgresql.Driver</db.driver>
-            </properties>
-        </profile>
-        <profile>
-            <id>travis</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <db.url>jdbc:postgresql://localhost/rabbit</db.url>
-                <db.username>postgres</db.username>
-                <db.password>password</db.password>
-                <db.driver>org.postgresql.Driver</db.driver>
-            </properties>
-        </profile>
-    </profiles>
 
     <dependencies>
         <dependency>
