--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,11 @@
             <artifactId>jmh-generator-annprocess</artifactId>
             <version>1.32</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.jcip</groupId>
+            <artifactId>jcip-annotations</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
