--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 
 before_install:
   - psql -c 'CREATE DATABASE rabbit' -U postgres
+  - psql -c 'CREATE DATABASE dreamjob' -U postgres
 
 env:
   global:
