--- a/junior_db/pom.xml
+++ b/junior_db/pom.xml
@@ -49,7 +49,7 @@
                 <version>3.6.2</version>
                 <configuration>
                     <changeLogFile>${project.basedir}/src/db/master.xml</changeLogFile>
-                    <url>${db.driver}</url>
+                    <url>${db.url}</url>
                     <driver>${db.driver}</driver>
                     <username>${db.username}</username>
                     <password>${db.password}</password>
