--- a/middle_servlet/src/main/webapp/WEB-INF/web.xml
+++ b/middle_servlet/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,15 @@
     <servlet-name>EditCandidate</servlet-name>
     <servlet-class>ru.job4j.dream.servlet.EditCandidate</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>RegServlet</servlet-name>
+    <servlet-class>ru.job4j.dream.servlet.RegServlet</servlet-class>
+  </servlet>
 
+  <servlet-mapping>
+    <servlet-name>RegServlet</servlet-name>
+    <url-pattern>/reg.do</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>EditCandidate</servlet-name>
     <url-pattern>/candidate.do</url-pattern>
