--- a/middle_servlet/src/main/webapp/WEB-INF/web.xml
+++ b/middle_servlet/src/main/webapp/WEB-INF/web.xml
@@ -56,7 +56,15 @@
     <servlet-name>CityServlet</servlet-name>
     <servlet-class>ru.job4j.dream.servlet.CityServlet</servlet-class>
   </servlet>
+  <filter>
+    <filter-name>CORSFilter</filter-name>
+    <filter-class>ru.job4j.dream.filter.CORSFilter</filter-class>
+  </filter>
 
+  <filter-mapping>
+    <filter-name>CORSFilter</filter-name>
+    <url-pattern>*.do</url-pattern>
+  </filter-mapping>
   <servlet-mapping>
     <servlet-name>CityServlet</servlet-name>
     <url-pattern>/city.do</url-pattern>
