--- a/middle_servlet/pom.xml
+++ b/middle_servlet/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>dream_job</module>
+        <module>cinema</module>
     </modules>
 
     <properties>
