2. Создать TODO list [#3786]

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
   - psql -c 'CREATE DATABASE dreamjob' -U postgres
   - psql -c 'CREATE DATABASE tracker' -U postgres
   - psql -c 'CREATE DATABASE cinema' -U postgres
+  - psql -c 'CREATE DATABASE todo' -U postgres
 
 env:
   global:
