--- a/middle_hibernate/pom.xml
+++ b/middle_hibernate/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>middle_hibernate</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>job4j_todo</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
