--- a/middle_hibernate/hibernate/pom.xml
+++ b/middle_hibernate/hibernate/pom.xml
@@ -3,21 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>job4j</artifactId>
+        <artifactId>middle_hibernate</artifactId>
         <groupId>org.example</groupId>
         <version>1.0-job4j-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>middle_hibernate</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>job4j_todo</module>
-        <module>hibernate</module>
-    </modules>
+    <artifactId>hibernate</artifactId>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
+
 </project>
