Реализовать площадку продаж машин. [#4747]

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
   - psql -c 'CREATE DATABASE tracker' -U postgres
   - psql -c 'CREATE DATABASE cinema' -U postgres
   - psql -c 'CREATE DATABASE todo' -U postgres
+  - psql -c 'CREATE DATABASE cars' -U postgres
 
 env:
   global:
