--- a/middle_hibernate/pom.xml
+++ b/middle_hibernate/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>job4j_todo</module>
         <module>hibernate</module>
+        <module>job4j_cars</module>
     </modules>
 
     <properties>
