--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,12 @@
             <version>3.1</version>
             <type>maven-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.5.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
