--- a/middle_hibernate/job4j_cars/pom.xml
+++ b/middle_hibernate/job4j_cars/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.5.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
